--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
+    "dotenv": "^16.1.4",
     "express": "^4.17.1",
     "pg": "^8.3.2",
     "react": "^18.2.0",
